--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "~2.5",
+        "symfony/symfony": "~2.3",
         "symfony/icu": "1.0.*",
         "doctrine/orm": "~2.2,>=2.2.3",
         "doctrine/doctrine-bundle": "1.2.*",
@@ -17,7 +17,7 @@
         "symfony/swiftmailer-bundle": "2.3.*",
         "symfony/monolog-bundle": "~2.3",
         "sensio/distribution-bundle": "2.3.*",
-        "sensio/framework-extra-bundle": "2.3.*",
+        "sensio/framework-extra-bundle": "3.0.x",
         "sensio/generator-bundle": "2.3.*",
         "jms/serializer-bundle": "0.13.*@dev",
         "friendsofsymfony/rest-bundle": "1.4.*",
@@ -26,7 +26,7 @@
         "willdurand/hateoas-bundle": "1.0.*@dev",
         "hautelook/templated-uri-bundle": "~2.0",
         "willdurand/rest-extra-bundle": "~1.0",
-        "friendsofsymfony/user-bundle": "1.3.5"
+        "lexik/jwt-authentication-bundle": "1.0.5"
     },
     "conflict": {
         "symfony/routing": "2.4.1"
