--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -7,8 +7,8 @@ parameters:
     database_password: root
     mailer_transport: smtp
     mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
+    mailer_user: root
+    mailer_password: root
     locale: fr
     secret: 85ec8ed10dc3cbcc5bb57d69ec8f3c1051
     database_path: null
