--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -86,7 +86,7 @@ fos_rest:
 lexik_jwt_authentication:
     private_key_path: %kernel.root_dir%/var/jwt/private.pem   # ssh private key path
     public_key_path:  %kernel.root_dir%/var/jwt/public.pem    # ssh public key path
-    pass_phrase:      'RamerEnSectionAvironX13cestlepied'     # ssh key pass phrase
+    pass_phrase:      'aviron'     # ssh key pass phrase
     token_ttl:        86400                                   # token ttl - defaults to 86400
 
 fos_http_cache:
